# llmworks-starter-single

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/templates/: adr_template.md  spec_template.md  work_order_template.md
src/llmworks_starter_single/: main.py
src/llmworks_starter_single/contracts/: common.py  hello.py
src/llmworks_starter_single/services/: greeting.py
tests/unit/: test_api.py  test_contracts_common.py
