[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmworks-starter-single"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
]
[project.optional-dependencies]
dev = ["ruff>=0.5.5","mypy>=1.10","black>=24.4","pre-commit>=3.7"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["llmworks_starter*"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings --cov=llmworks_starter --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","N","B"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llmworks_starter_single.main"
disable_error_code = ["misc"]  # ignore untyped FastAPI decorators in this module only

